@@ -7,6 +7,7 @@
 * Better integration with system::follow_url() routine.
 * Added automatic style creation from XML schema.
 * Added simple language configuration support by the tk::Schema class.
+* Fixed allocation for invisible widgets inside the tk::Grid container.
 - Add custom mouse pointer for fraction actions.
 
 === 0.5.0 ===
